styles/style.css
/* CSS Stylesheet. Cloning TNW site for practicing responsive design */
body {
  font-family: Roboto, Arial, sans-serif;
  margin: 0;
}

body a {
  text-decoration: none;
}

/* variables and global clases */

:root {
  --primary: #f42;
}

/* Hide Elements */

.hide {
  display: none;
}

.hidden {
  position: absolute;
  clip: rect(1px 1px 1px 1px);
  clip: rect(1px, 1px, 1px, 1px);
}

.flex-container-wrap {
  display: flex;
  flex-wrap: wrap;
}

/* Flex properties */
.flex-container {
  display: flex;
}

.center {
  justify-content: center;
}

.fixed {
  position: fixed;
  top: 0;
  right: 0;
  width: 100%;
  background-color: white;
  z-index: 100;
}

.link-decoration {
  text-decoration: none;
}

.orange-link {
  color: var(--primary);
  text-decoration: none;
}

a.orange-link:hover {
  color: #000;
}

/* variables and global clases */

/* Navbar */

/* main CSS Style */

main {
  margin-top: 100px;
}

/* navbar */

.navbar {
  padding: 0;
}

.nav-right {
  width: 100%;
}

.nav-white {
  justify-content: space-between;
  align-items: center;
}

.logo {
  background-color: #f42;
  background: linear-gradient(to bottom right, #c09, #f42 85%);
  padding: 16px;
  margin: 0;
  height: 100%;
}

.logo .nav-logo {
  width: 70px;
  height: 15px;
}

.nav-top {
  background-color: #131313;
  width: 100%;
}

.nav-top li {
  margin-left: 12px;
  display: inline;
}

/* .left-side li:first-child a {
  color: inherit;
} */

.nav-top a {
  font-size: 13px;
  color: #a0a0a0;
}

.nav-top .flex-container {
  justify-content: space-between;
  padding: 10px 15px;
}

.nav-info {
  margin: 10px 10px;
  text-align: left;
}

.nav-info li {
  display: inline;
  padding: 0 10px;
}

.nav-info a {
  color: #999;
  font-size: 14px;
}

.nav-icons i {
  font-size: 20px;
  padding: 15px;
  border-left: 1px solid #ebebeb;
}

#search-icon {
  color: #7e7e7e;
}

#bars-icon {
  color: var(--primary);
}

.ads {
  background-color: #ffdd33;
  text-align: center;
}

.ads .link-decoration {
  color: black;
  display: inline-block;
  font-size: 13px;
  padding: 25px 0;
}

/* Section's classes */

section {
  margin: 0 20px;
  flex-direction: column;
}

.main-section {
  color: #7f7f80;
  margin: 0;
}

.main-section h2 {
  font-size: 20px;
  margin: 0;
  color: #fff;
  padding-bottom: 10px;
}

.section-three {
  justify-content: space-around;
}

.apps-section {
  padding: 25px 0;
}

.apps-section .title {
  margin-bottom: 14px;
  font-size: 28px;
}

.apps-section h2 {
  font-size: 20px;
  margin: 0;
  color: #fff;
  padding-bottom: 10px;
}

.section-later {
  background-color: #fff4f2;
  justify-content: space-between;
}

.section-later .left-side {
  padding: 10px 14px 0;
}

.section-later .imagen {
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/google-health-information-search-coronavirus-368x276.jpg);
  max-width: 96px;
  min-width: 96px;
  max-height: 96px;
  min-height: 96px;
  background-position: 50%;
  background-size: cover;
  margin-top: 3px;
}

.left-side {
  color: var(--primary);
}

.left-side h5 {
  font-size: 13px;
  font-weight: 300;
  margin-bottom: 5px;
}

.left-side a {
  font-size: 14px;
  font-weight: 700;
  color: var(--primary);
}
.section-headline {
  background-color: #fff;
}

.section-headline li {
  border-bottom: 1px solid #eee;
  padding: 6px 0 6px 14px;
}

.section-headline li::before {
  content: "";
  align-self: flex-start;
  min-width: 4px;
  min-height: 4px;
  border-radius: 50%;
  background-color: rgb(255, 68, 34);
  align-self: center;
}

.section-headline a {
  color: #555;
  font-size: 13px;
  padding: 6px 0 6px 10px;
}

.section-five {
}

.section-six {
}

/* Articles' classes */

.main-article {
  height: 150px;
  flex-direction: column;
  justify-content: flex-end;
}

.funding-info {
}

.apps-main-article {
  flex-direction: column;
  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Quibi-hed-368x276.jpg");
  background-position: 50%;
  background-size: cover;
  height: 406px;
}

.app-main-info {
  margin: 10px;
}

.categories-articles {
  margin-bottom: 20px;
}

.article-6 {
}
/* Article Ids */

#first-article {
  background-image: url("../img/image-1.jpg");
  background-position: bottom;
  background-size: cover;
}

#second-article {
  background-image: url("../img/image-2.jpg");
  background-position: bottom;
  background-size: cove9999r;
}

#third-article {
  background-image: url("../img/image-3.jpg");
  background-position: bottom;
  background-size: cover;
}

.opacity {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9));
  height: 100%;
  flex-direction: column;
  justify-content: flex-end;
  padding: 15px;
}

.main-article {
  margin: 5px;
}

.category {
  font-size: 12px;
  color: white;
  text-transform: uppercase;
  padding-bottom: 5px;
}

.metadata {
  font-size: 12px;
  color: #999a9a;
}

.metadata span,
.metadata time,
.metadata i {
  margin-right: 5px;
}

.link-decoration {
  color: #999a9a;
}

.title {
  font-size: 25px;
  font-weight: 900;
  margin: 15px 0;
}

.stories {
  padding: 8px;
}

.stories img {
  width: 75px;
  height: 75px;
  margin-right: 10px;
}

/* Info of stories article */
.story-title {
  margin: 10px 10px 10px 0;
  font-size: 14px;
  font-weight: 700;
}

.story-details {
  color: #aaa;
  text-decoration: none;
  font-size: 12px;
  margin-top: 5px;
}

/* Last deals title style */
.deals {
  justify-content: space-between;
  align-items: baseline;
}

.all-deals {
  font-size: 14px;
}

/* Info of Last Deals */

.price {
  color: #555;
  font-size: 14px;
  margin-top: 10px;
}

.previous-price {
  opacity: 0.5;
  font-size: 0.8rem;
  text-decoration: line-through;
}

/* Images in stories section */

.image-stories {
  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-...-796x417.png");
  background-position: 50% center;
  min-width: 75px;
  min-height: 75px;
  max-width: 75px;
  max-height: 75px;
  background-size: cover;
  margin-right: 10px;
}

/*Style in Funding rounds section */

.latest-funding a {
  margin: 5px 0;
}

.sublinks {
  flex-direction: column;
}

.sublinks a {
  font-size: 14px;
}

.funding-info {
  position: relative;
  margin: 12px 0;
  background-color: #fffaf8;
}

.funding-info img {
  position: absolute;
  top: 0;
  left: 0;
  margin: 10px;
  width: 60px;
  height: 60px;
}

.funding-info h4 {
  background: #f42;
  color: #fff;
  font-size: 18px;
  padding: 10px 16px 10px 85px;
}

.funding-info a {
  color: #555;
  text-decoration: none;
  font-size: 12px;
}

.source-link {
  opacity: 0.5;
}

.funding-amount {
  padding: 10px 16px 10px 85px;
  background-color: #ffebe7;
}

.funding-amount h4 {
  padding: 0;
  margin-bottom: 5px;
  background-color: transparent;
  color: #000;
}

.funding-amount h5 {
  color: #000;
  opacity: 0.5;
  font-size: 11px;
}

.funding-icons {
  font-size: 13px;
  flex-direction: column;
  padding: 16px;
  border-bottom: 2px solid #ffe3dd;
}

.funding-icons a {
  color: #000;
}
.funding-icons span {
  color: #555;
}

.funding-icons i {
  margin-right: 10px;
  font-size: 20px;
}

.funding-news {
  padding: 10px 16px;
}
/* Footer Style */

.social-icons {
  margin: 0;
}

.wrapper {
  padding: 20px 5px;
  background-color: #131313;
}

.wrapper .flex-container {
  margin: 20px 0 30px;
}

.icons {
  height: 20px;
  width: 20px;
  padding: 12px;
  border-radius: 100%;
  margin: 0 3px;
  background-color: #333;
  text-align: center;
}

.icon {
  color: #fff;
  font-size: 20px;
  display: inline-block;
}

a.icons:hover {
  background-color: #222;
}

.other-links {
  font-variant: small-caps;
  text-transform: uppercase;
  color: #aaa;
  margin: auto 10px;
  text-decoration: none;
  font-size: 13px;
}

a.other-links:hover {
  color: #fff;
}

.footer-legal {
  color: #aaa;
  padding: 35px 20px;
  font-size: 13px;
  background-color: #000;
  text-align: center;
  flex-direction: column;
  line-height: 20px;
}

.footer-legal img {
  height: 9px;
}

/* Media allow us to create a responsive design 795 to up */

@media screen and (min-width: 795px) {
  .hide {
    display: inline-block;
  }

  /* navbar */

  .main-section {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 1fr;
  }

  .main-section h2 {
    font-size: 24px;
    margin: 0;
    color: #fff;
    padding-bottom: 10px;
  }

  .logo .nav-logo {
    height: 55px;
  }

  #bars-icon {
    display: none;
  }

  .ads {
    text-align: left !important;
  }

  .ads .link-decoration {
    padding: 10px 0 10px 126px;
  }

  /* Hide elements in resolutions more than 768px */

  .flex-container-space-between {
    display: flex;
    justify-content: space-between;
  }

  .image-stories {
    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-...-796x417.png");
    background-position: 50%;
    background-size: cover;
    background-repeat: no-repeat;
    padding-top: 50%;
    padding-left: 75%;
    min-width: 0;
    min-height: 0;
  }

  .stories {
    flex-basis: 33.33%;
    flex-direction: column;
    padding: 0;
    margin-bottom: 20px;
  }

  .latest-news {
    flex-direction: row;
  }

  .latest-news .flex-container-wrap {
    margin: 30px 0;
  }

  .sublinks {
    flex-direction: row;
  }

  .sublinks a {
    font-size: 16px;
  }

  .latest-funding a {
    margin-right: 10px;
  }

  .orange-bar {
    padding-right: 10px;
    border-right: 1px solid;
  }

  .funding-info {
    flex-basis: 25%;
    max-width: 25%;
    margin-left: 15px;
  }

  .flex-two-columns {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }

  .categories-articles {
    flex-basis: 48%;
    max-width: 48%;
    flex-direction: column;
    margin-right: 5px;
  }

  /* navbar */

  /* first articles */

  #first-article {
    grid-column: 1/2;
    grid-row: 1/3;
    height: auto;
    width: auto;
  }

  #first-article h2 {
    font-size: 48px;
  }

  #second-article {
    grid-column: 2/3;
    grid-row: 1/2;
  }

  #third-article {
    grid-column: 2/3;
    grid-row: 2/3;
  }

  /* first articles */
}

/* Media allow us to create a responsive design 768 to up */

